--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
        
         {
             "name": "Python: Current File",
@@ -11,7 +12,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args" : ["www.google.com", "80", "file.txt"]
+            "args" : ["131.94.128.43", "54634", "file.txt"]
         }
     ]
 }
