--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,8 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "console": "integratedTerminal",
-            "args" : ["131.94.128.43", "54634", "file.txt"]
+            "console": "integratedTerminal"
+            //"args" : ["131.94.128.43", "54634", "file.txt"]
         }
     ]
 }
